Cambios para el proyecto final

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         <div class="logo"><a href="index.html"><img src="./assets/imagen/logo.png" alt="Logo de Breaking Bar"></a></div>
         <nav>
             <ul>
+                <li><a href="index.html">INICIO</a></li>
                 <li><a href="./pages/menu.html">MENÚ</a></li>
                 <li><a href="./pages/nosotros.html">NOSOTROS</a></li>
                 <li><a href="./pages/sucursales.html">SUCURSALES</a></li>
@@ -38,16 +39,16 @@
 
         <section class="container">
             <div class="row introNosotros">
-                <div class="col-xl-6 col-lg-5 col-12">
+                <div class="col-xl-6 col-lg-5 col-12 columna_nosotros">
                     <div class="imagen_intro--nosotros">
 
-                        <img src="./assets/imagen/bar.jpg" alt="Sucursal Breaking Bar Moreno">
+                        <img src="./assets/imagen/bar.png" alt="Sucursal Breaking Bar Moreno">
 
                     </div>
                 </div>
                 <div class="col-xl-6 col-lg-7 col-12 quienes_somos">
 
-                    <h2>¿QUIÉNES SOMOS?</h2>
+                    <h1>¿QUIÉNES SOMOS?</h1>
                     <p>Como un tal Walter Wide, nuestro inicio fue sensillo como un pequeño bar con temática sobre la
                         popular serie de televisión Breaking Bad. Luego de cinco años, ahora tenemos dos sucursales y
                         cada día cuenta con mas clientes que se han vuelto parte de nuestra familia.</p>
@@ -56,31 +57,33 @@
                         cuales tu puedes ser parte. Quieres saber cómo?
                     </p>
                     <a href="./pages/nosotros.html">
-                        <h3>¡CONOCE MAS!</h3>
+                        <h2>¡CONOCE MAS!</h2>
                     </a>
                     <br>
+                </div>
+
                 </div>
 
                 <div class="row introMenu">
                     <div class="col-xl-6 col-lg-7 ordernar_intro">
 
-                        <h2>¿QUÉ PUEDO ORDERNAR?</h2>
-                        <p>Desde entradas como picadas y ensaladas pasando por platos clásicos como napolitana con
+                        <h1>¿QUÉ PUEDO ORDERNAR?</h1>
+                        <p>Desde entradas como picadas y ensaladas pasando por clásicos como napolitana con
                             fritas y, por supuesto, postres como helados y flanes. Todo lo que busques para un buen
                             almuerzo/cena lo vas a encontrar.</p>
 
-                        <p>Pero eso no es todo. En nuesto catálogo de menus, podras encontrar platos especiales con
-                            temática de la serie Breaking Bad. Te interesa saber mas sobre lo que puedes ordenar?</p>
+                        <p>Pero eso no es todo, podras encontrar platos especiales con
+                            temática de la serie Breaking Bad. Enterate más sobre lo que puedes ordenar.</p>
                         <a href="./pages/helados.html">
-                            <h3>¡OBSERVA NUESTRA MERCANCIA!</h3>
+                            <h2>¡OBSERVA NUESTRA MERCANCIA!</h2>
                         </a>
                         <br>
 
                     </div>
-                    <div class="col-xl-6 col-lg-5">
+                    <div class="col-xl-6 col-lg-5 columna_ordenar">
                         <div class="imagen_intro--menu">
 
-                            <img src="./assets/imagen/comidas.jpg"
+                            <img src="./assets/imagen/comidas.png"
                                 alt="Breaking hamburgesa con guarnición de papas fritas">
 
                         </div>
@@ -88,14 +91,13 @@
                     </div>
 
                 </div>
-            </div>
         </section>
 
     </main>
 
     <footer>
 
-        <h4>SPONSORS</h4>
+        <h4>PATROCINADORES</h4>
 
         <div class="container_footer">
             <div class="row sponsors">
@@ -108,7 +110,7 @@
             </div>
         </div>
 
-        <h4 class="socialPages">SOCIAL PAGES</h4>
+        <h4 class="socialPages">REDES SOCIALES</h4>
 
         <div class="iconBox">
 
