--- a/pages/error404.html
+++ b/pages/error404.html
@@ -24,6 +24,7 @@
         <div class="logo"><a href="../index.html"><img src="../assets/imagen/logo.png" alt="Logo de Breaking Bar"></a></div>
         <nav>
             <ul>
+                <li><a href="../index.html">INICIO</a></li>
                 <li><a href="menu.html">MENÚ</a></li>
                 <li><a href="nosotros.html">NOSOTROS</a></li>
                 <li><a href="sucursales.html">SUCURSALES</a></li>
@@ -49,7 +50,7 @@
 
     <footer>
 
-        <h4>SPONSORS</h4>
+        <h4>PATROCINADORES</h4>
 
         <div class="container_footer">
             <div class="row sponsors">
@@ -62,7 +63,7 @@
             </div>
         </div>
 
-        <h4 class="socialPages">SOCIAL PAGES</h4>
+        <h4 class="socialPages">REDES SOCIALES</h4>
 
         <div class="iconBox">
 
