--- a/pages/menu.html
+++ b/pages/menu.html
@@ -21,6 +21,7 @@
     <div class="logo"><a href="../index.html"><img src="../assets/imagen/logo.png" alt="Logo de Breaking Bar"></a></div>
     <nav>
       <ul>
+        <li><a href="../index.html">INICIO</a></li>
         <li><a href="menu.html">MENÚ</a></li>
         <li><a href="nosotros.html">NOSOTROS</a></li>
         <li><a href="sucursales.html">SUCURSALES</a></li>
@@ -31,12 +32,11 @@
 
   <main class="menu">
 
-    <div class="imagenMenu"><img src="../assets/imagen/menu_principal.jpeg"
-        alt="Comidas servidas en mesa de Breaking Bar."></div>
+    <div class="imagenMenu"><img src="../assets/imagen/menu_principal-01.jpg" alt="Comidas servidas en mesa de Breaking Bar."></div>
 
     <section class="contenedorMenu">
 
-      <h1>MENU</h1>
+      <h1>MENÚ</h1>
 
       <p>Esta sección conforma todo el menú que puede encontrar a disposición para ser entragado mediante un Delivery.
         Para realizar un encargo, debes de dirigirte a la sección de SUCURSALES donde podras encontrar el teléfono de
@@ -388,7 +388,7 @@
 
   <footer>
 
-    <h4>SPONSORS</h4>
+    <h4>PATROCINADORES</h4>
 
     <div class="container_footer">
       <div class="row sponsors">
@@ -401,7 +401,7 @@
       </div>
     </div>
 
-    <h4 class="socialPages">SOCIAL PAGES</h4>
+    <h4 class="socialPages">REDES SOCIALES</h4>
 
     <div class="iconBox">
 
