--- a/pages/registrate.html
+++ b/pages/registrate.html
@@ -22,6 +22,7 @@
                     alt="Saul, el personaje de la serie tomando un helado"></a></div>
         <nav>
             <ul>
+                <li><a href="../index.html">INICIO</a></li>
                 <li><a href="menu.html">MENÚ</a></li>
                 <li><a href="nosotros.html">NOSOTROS</a></li>
                 <li><a href="sucursales.html">SUCURSALES</a></li>
@@ -50,7 +51,7 @@
                     <input type="telefono" id="telefono" name="telefono">
                     <label for="email">E-MAIL</label>
                     <input type="email" id="email" name="email" required>
-                    <input class="submit" type="submit" value="SUBMIT">
+                    <button type="submit" class="btn btn-secondary btn-lg submit">REGISTRARSE</button>
                 </form>
 
             </div>
@@ -86,7 +87,7 @@
 
     <footer>
 
-        <h4>SPONSORS</h4>
+        <h4>PATROCINADORES</h4>
 
         <div class="container_footer">
             <div class="row sponsors">
@@ -99,7 +100,7 @@
             </div>
         </div>
 
-        <h4 class="socialPages">SOCIAL PAGES</h4>
+        <h4 class="socialPages">REDES SOCIALES</h4>
 
         <div class="iconBox">
 
