--- a/pages/sucursales.html
+++ b/pages/sucursales.html
@@ -22,6 +22,7 @@
         </div>
         <nav>
             <ul>
+                <li><a href="../index.html">INICIO</a></li>
                 <li><a href="menu.html">MENÚ</a></li>
                 <li><a href="nosotros.html">NOSOTROS</a></li>
                 <li><a href="sucursales.html">SUCURSALES</a></li>
@@ -163,7 +164,7 @@
 
     <footer>
 
-        <h4>SPONSORS</h4>
+        <h4>PATROCINADORES</h4>
 
         <div class="container_footer">
             <div class="row sponsors">
@@ -176,7 +177,7 @@
             </div>
         </div>
 
-        <h4 class="socialPages">SOCIAL PAGES</h4>
+        <h4 class="socialPages">REDES SOCIALES</h4>
 
         <div class="iconBox">
 
