Prolijidad en el codigo

--- a/pages/error404.html
+++ b/pages/error404.html
@@ -21,7 +21,8 @@
 
 <body>
     <header>
-        <div class="logo"><a href="../index.html"><img src="../assets/imagen/logo.png" alt="Logo de Breaking Bar"></a></div>
+        <div class="logo"><a href="../index.html"><img src="../assets/imagen/logo.png" alt="Logo de Breaking Bar"></a>
+        </div>
         <nav>
             <ul>
                 <li><a href="../index.html">INICIO</a></li>
@@ -42,8 +43,10 @@
 
             <p>No hay nada que ver aquí. Regresa por donde viniste</p>
 
-            <div class="return_button"><h2><a href="../index.html">REGRESAR</a></h2></div>
-        
+            <div class="return_button">
+                <h2><a href="../index.html">REGRESAR</a></h2>
+            </div>
+
         </div>
 
     </main>
