--- a/pages/menu.html
+++ b/pages/menu.html
@@ -32,7 +32,8 @@
 
   <main class="menu">
 
-    <div class="imagenMenu"><img src="../assets/imagen/menu_principal-01.jpg" alt="Comidas servidas en mesa de Breaking Bar."></div>
+    <div class="imagenMenu"><img src="../assets/imagen/menu_principal-01.jpg"
+        alt="Comidas servidas en mesa de Breaking Bar."></div>
 
     <section class="contenedorMenu">
 
