--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -42,7 +42,8 @@
         <div class="col-xl-6 col-lg-5 col-12">
           <div class="nosotros_imagen--objetivo">
 
-            <img src="../assets/imagen/nosotros1.jpg" alt="Hall con varias pinturas de personajes y momentos de la serie Breaking Bar">
+            <img src="../assets/imagen/nosotros1.jpg"
+              alt="Hall con varias pinturas de personajes y momentos de la serie Breaking Bar">
 
           </div>
         </div>
@@ -77,7 +78,9 @@
         </div>
         <div class="col-xl-6 col-lg-5 col-12">
 
-          <iframe src="https://www.youtube.com/embed/zKo3NuXpCH8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+          <iframe src="https://www.youtube.com/embed/zKo3NuXpCH8" title="YouTube video player" frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            allowfullscreen></iframe>
 
         </div>
 
